# adventofcode2019

./: Cargo.toml  newday.sh
.circleci/: config.yaml  config.yml
benches/: day18.rs
src/: grid.rs  intcomp.rs  lib.rs  parse.rs
src/day1/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: README.txt  main.rs
src/day14/: README.txt  main.rs
src/day15/: README.txt  main.rs
src/day16/: README.txt  main.rs
src/day17/: README.txt  hand_calculated.txt  main.rs
src/day18/: README.txt  area.rs  main.rs  mod.rs
src/day19/: README.txt  main.rs
src/day2/: main.rs
src/day20/: README.txt  main.rs
src/day21/: README.txt  main.rs
src/day22/: README.txt  main.rs
src/day23/: README.txt  main.rs
src/day24/: README.txt  main.rs
src/day25/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: README.txt  main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: README.txt  main.rs
src/day9/: README.txt  main.rs
