[package]
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"
name = "aoc"
version = "0.1.0"

[dependencies]
failure = "0.1.6"
err-derive = "0.2.2"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"

[dev-dependencies]
test-env-log = "0.2.2"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"


[[bin]]
name = "day3"
path = "src/day3/main.rs"


[[bin]]
name = "day4"
path = "src/day4/main.rs"


[[bin]]
name = "day5"
path = "src/day5/main.rs"


[[bin]]
name = "day6"
path = "src/day6/main.rs"
