[package]
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"
name = "aoc"
version = "0.1.0"

[dependencies]
anyhow = "1.0.28"
thiserror = "1.0.14"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
itertools = "0.9.0"
num = "0.2.1"
text_io = "0.1.8"

[dev-dependencies]
test-env-log = "0.2.2"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"


[[bin]]
name = "day3"
path = "src/day3/main.rs"


[[bin]]
name = "day4"
path = "src/day4/main.rs"


[[bin]]
name = "day5"
path = "src/day5/main.rs"


[[bin]]
name = "day6"
path = "src/day6/main.rs"


[[bin]]
name = "day7"
path = "src/day7/main.rs"


[[bin]]
name = "day8"
path = "src/day8/main.rs"


[[bin]]
name = "day9"
path = "src/day9/main.rs"


[[bin]]
name = "day10"
path = "src/day10/main.rs"


[[bin]]
name = "day11"
path = "src/day11/main.rs"


[[bin]]
name = "day12"
path = "src/day12/main.rs"


[[bin]]
name = "day13"
path = "src/day13/main.rs"


[[bin]]
name = "day14"
path = "src/day14/main.rs"


[[bin]]
name = "day15"
path = "src/day15/main.rs"


[[bin]]
name = "day16"
path = "src/day16/main.rs"
