[package]
authors = ["Wendell Smith <wackywendell@gmail.com>"]
edition = "2018"
name = "aoc"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = "3.2"
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
num = "0.4"
slotmap = "1.0.3"
text_io = "0.1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
test-env-log = "0.2"

[[bench]]
harness = false
name = "day18"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"

[[bin]]
name = "day8"
path = "src/day8/main.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day12"
path = "src/day12/main.rs"

[[bin]]
name = "day13"
path = "src/day13/main.rs"

[[bin]]
name = "day14"
path = "src/day14/main.rs"

[[bin]]
name = "day15"
path = "src/day15/main.rs"

[[bin]]
name = "day16"
path = "src/day16/main.rs"

[[bin]]
name = "day17"
path = "src/day17/main.rs"

[[bin]]
name = "day18"
path = "src/day18/main.rs"

[[bin]]
name = "day19"
path = "src/day19/main.rs"

[[bin]]
name = "day20"
path = "src/day20/main.rs"

[[bin]]
name = "day21"
path = "src/day21/main.rs"

[[bin]]
name = "day22"
path = "src/day22/main.rs"

[[bin]]
name = "day23"
path = "src/day23/main.rs"

[[bin]]
name = "day24"
path = "src/day24/main.rs"

[[bin]]
name = "day25"
path = "src/day25/main.rs"
